cabal-version:      2.4
name:               byte-types
version:            0.1
license:            BSD-3-Clause
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.2
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/byte-types/
bug-reports:        https://github.com/tbidne/byte-types/issues
synopsis:           Byte with type-level units (e.g. B, KB, MB, ...).
description:
  This package provides types for performing type-safe byte operations
  (e.g. conversions, addition), taking units into account.
  .
  The primary module is "ByteTypes.Bytes". The module is sufficient for most
  purposes, providing types that track units (e.g. B, KB, MB, ...) and allow
  handling of unknown sizes at runtime.
  .
  The other module of interest is "ByteTypes.Network". This module has a
  virtually identical API to "ByteTypes.Bytes", but the types it provides
  also track /direction/ (i.e. uploaded vs downloaded), for when this
  distinction is important (e.g. computing total uploaded network traffic).
  .
  Each module is self-contained, so it is expected that users will only need
  to import one module at a time, unless there is a desire to explicitly use
  network and non-network byte types in the same module.

category:
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/byte-types

common common-exts
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilyDependencies
    TypeOperators

library
  import:           common-exts
  exposed-modules:
    ByteTypes.Bytes
    ByteTypes.Class.Conversion
    ByteTypes.Class.Normalize
    ByteTypes.Class.PrettyPrint
    ByteTypes.Data.Bytes
    ByteTypes.Data.Bytes.Internal
    ByteTypes.Data.Direction
    ByteTypes.Data.Network
    ByteTypes.Data.Network.NetBytes
    ByteTypes.Data.Network.NetBytes.Internal
    ByteTypes.Data.Network.SomeNetDir
    ByteTypes.Data.Network.SomeNetDir.Internal
    ByteTypes.Data.Size
    ByteTypes.Network

  build-depends:
    , algebra-simple  ^>=0.1
    , base            >=4.14.1.0 && <4.17
    , deepseq         ^>=1.4.4.0

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite doctest
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , doctest  >=0.16.3 && <0.21

  hs-source-dirs:   test/doctest
  default-language: Haskell2010

test-suite unit
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    ByteTypes.Props.Class.Conversion
    ByteTypes.Props.Data.Bytes
    ByteTypes.Props.Data.Bytes.Generators
    ByteTypes.Props.Data.Direction.Generators
    ByteTypes.Props.Data.Network.Generators
    ByteTypes.Props.Data.Network.NetBytes
    ByteTypes.Props.Data.Network.SomeNetDir
    ByteTypes.Props.Data.Size.Generators
    ByteTypes.Props.MaxRuns
    ByteTypes.Props.Verify.Algebra
    ByteTypes.Props.Verify.Conversion
    ByteTypes.Props.Verify.Normalize
    ByteTypes.Utils

  build-depends:
    , algebra-simple
    , base
    , byte-types
    , hedgehog        >=1.0.2   && <1.2
    , tagged          ^>=0.8.6
    , tasty           >=1.1.0.3 && <1.5
    , tasty-hedgehog  >=1.0.1.0 && <1.3

  hs-source-dirs:   test/unit
  default-language: Haskell2010
