cabal-version:      2.4
name:               byte-types
version:            0.1
license:            BSD-3-Clause
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/byte-types/
bug-reports:        https://github.com/tbidne/byte-types/issues
synopsis:           Byte with type-level units (e.g. B, KB, MB, ...).
description:
  This package provides types for performing type-safe byte operations
  (e.g. conversions, addition), taking units into account.
  .
  The primary module is "Data.Bytes". The module is sufficient for most
  purposes, providing types that track units (e.g. B, KB, MB, ...) and allow
  handling of unknown sizes at runtime.
  .
  The other module of interest is "Data.Bytes.Network". This module has a
  virtually identical API to "Data.Bytes", but the types it provides
  also track /direction/ (i.e. uploaded vs downloaded), for when this
  distinction is important (e.g. computing total uploaded network traffic).
  .
  Each module is self-contained, so it is expected that users will only need
  to import one module at a time, unless there is a desire to explicitly use
  network and non-network byte types in the same module.

category:
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/byte-types

common common-exts
  default-extensions:
    ApplicativeDo
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators

library
  import:           common-exts
  exposed-modules:
    Data.Bytes
    Data.Bytes.Class.Conversion
    Data.Bytes.Class.Normalize
    Data.Bytes.Class.Parser
    Data.Bytes.Class.Wrapper
    Data.Bytes.Formatting
    Data.Bytes.Formatting.Base
    Data.Bytes.Formatting.Direction
    Data.Bytes.Formatting.Size
    Data.Bytes.Internal
    Data.Bytes.Network
    Data.Bytes.Network.Direction
    Data.Bytes.Network.Internal
    Data.Bytes.Size

  build-depends:
    , algebra-simple  ^>=0.1
    , base            >=4.14.1.0 && <4.18
    , bounds          ^>=0.1
    , data-default    >=0.2      && <0.8
    , deepseq         ^>=1.4.4.0
    , megaparsec      >=7.0.5    && <9.3
    , optics-core     ^>=0.4
    , prettyprinter   >=1.4.0    && <1.8
    , text            >=1.2.3.2  && <2.1

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite doctest
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , doctest-parallel  ^>=0.2
    , env-guard         ^>=0.2

  hs-source-dirs:   test/doctest
  default-language: Haskell2010

test-suite unit
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Unit.Data.Bytes
    Unit.Data.Bytes.Class.Conversion
    Unit.Data.Bytes.Network
    Unit.Golden
    Unit.Props.Generators.Bytes
    Unit.Props.Generators.Direction
    Unit.Props.Generators.Formatting
    Unit.Props.Generators.Network
    Unit.Props.Generators.Parsing
    Unit.Props.Generators.Size
    Unit.Props.MaxRuns
    Unit.Props.Verify.Algebra
    Unit.Props.Verify.Conversion
    Unit.Props.Verify.Normalize
    Unit.Props.Verify.Parsing
    Unit.Utils

  build-depends:
    , algebra-simple
    , base
    , byte-types
    , bytestring      >=0.10.10.0 && <0.12
    , hedgehog        >=1.0.2     && <1.3
    , optics-core
    , tagged          ^>=0.8.6
    , tasty           >=1.1.0.3   && <1.5
    , tasty-golden    ^>=2.3.1
    , tasty-hedgehog  >=1.0.1.0   && <1.4
    , text

  hs-source-dirs:   test/unit
  default-language: Haskell2010
